simplify future debugging..

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<!-- startheader -->
 <header class="site-header">
 
   <div class="wrapper">
@@ -29,3 +30,4 @@
     {%- endif -%}
   </div>
 </header>
+<!-- endheader -->
