--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<!-- startfooter -->
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
@@ -28,3 +29,4 @@
   </div>
 
 </footer>
+<!-- endfooter -->
