--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<!-- starthead -->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,3 +10,4 @@
   {%- include custom-head.html -%}
   
 </head>
+<!-- endhead -->
