--- a/_layouts/gruppe.html
+++ b/_layouts/gruppe.html
@@ -9,7 +9,7 @@ layout: default
 
   <div class="post-content">
  ## {{ post.gruppenname }}
-{{ post.gruppenname }} ist eine Gruppe.
+ {{ post.gruppenname }} ist eine Gruppe, dessen Eintrag zuletzt am {{ post.last-updated }} aktualisiert wurde.
 
 {% if page.gruppenlabels %}
 Die Gruppe wurde folgenden labels zugeordnet:
