--- a/_layouts/gruppe.html
+++ b/_layouts/gruppe.html
@@ -4,11 +4,10 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+    <h1 class="post-title">{{ page.gruppenname | escape }}</h1>
   </header>
 
   <div class="post-content">
-	  <h2>{{ page.gruppenname }}</h2>
 	  {{ page.gruppenname }} ist eine Gruppe, dessen Eintrag zuletzt am {{ page.last-updated }} aktualisiert wurde.<br>
 
 Die Gruppe findet ihr hier:
