does it work in a tags? that would make no sense though..

--- a/_layouts/announce.html
+++ b/_layouts/announce.html
@@ -31,7 +31,7 @@ layout: default
   {% if page.imageurl or page.imagelocal %}
   <div>
 	  {% if page.imagelocal %}
-	  <img src="{% link {{page.imagelocal}} %}" alt="{% if page.alttext %}{{page.alttext}}{%else%}Ein Bild passend zur Veranstaltung (keine Bildbeschreibung hinterlegt).{%endif%}">
+	  <a href="{% link {{page.imagelocal}} %}"><img src="" alt="{% if page.alttext %}{{page.alttext}}{%else%}Ein Bild passend zur Veranstaltung (keine Bildbeschreibung hinterlegt).{%endif%}"></a>
 	  {% else %}
 	  <img src="{{page.imageurl}}"/>
 	  {% endif %}
