--- a/_layouts/announce.html
+++ b/_layouts/announce.html
@@ -31,9 +31,9 @@ layout: default
   {% if page.imageurl or page.imagelocal %}
   <div>
 	  {% if page.imagelocal %}
-	  <a href="{% link {{page.imagelocal}} %}"><img src="" alt="{% if page.alttext %}{{page.alttext}}{%else%}Ein Bild passend zur Veranstaltung (keine Bildbeschreibung hinterlegt).{%endif%}"></a>
+	  <img src="{{page.imagelocal | relative_url }}" alt="{% if page.alttext %}{{page.alttext}}{%else%}Ein Bild passend zur Veranstaltung (keine Bildbeschreibung hinterlegt).{%endif%}">
 	  {% else %}
-	  <img src="{{page.imageurl}}"/>
+	  <img src="{{page.imageurl}}" alt="{% if page.alttext %}{{page.alttext}}{%else%}Ein Bild passend zur Veranstaltung (keine Bildbeschreibung hinterlegt).{%endif%}">
 	  {% endif %}
   </div>
   {% endif %}
