--- a/_layouts/announce.html
+++ b/_layouts/announce.html
@@ -4,11 +4,11 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+      <h1 class="post-title p-name" itemprop="name headline">{{page.event-date | date: date_format}}: {{ page.title | escape }}</h1>
+    <p class="post-meta">
       {%- if page.author -%}
-        • {% for author in page.author %}
+        {% for author in page.author %}
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
@@ -20,14 +20,12 @@ layout: default
       {% else %}
       keine Gruppe angegeben.
       {% endfor %}
-
     </p>
   </header>
-
   <div class="post-content e-content" itemprop="articleBody">
-	  <h3> Achtung! Vorläufige Informationen die nicht von den Anmeldenden gepflegt werden! Bitte unten nachschauen! </h3>
-    {{ content }}
-
+  <b> Achtung! Vorläufige Informationen die nicht von den Anmeldenden gepflegt werden! Bitte unten nachschauen! </b>
+  <br/>
+  {{ content }}
   {% if page.imageurl or page.imagelocal %}
   <div>
 	  {% if page.imagelocal %}
@@ -37,10 +35,9 @@ layout: default
 	  {% endif %}
   </div>
   {% endif %}
-    {% if page.alttext %}
+  {% if page.alttext %}
     {{alttext}}
-    {% endif %}
-
+  {% endif %}
   </div>
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
