add a note about alt text

--- a/_layouts/announce.html
+++ b/_layouts/announce.html
@@ -36,6 +36,7 @@ layout: default
   </div>
   {% endif %}
   {% if page.alttext %}
+  Alternativtext des Bilds (für Menschen ohne Screenreader):
     {{alttext}}
   {% endif %}
   </div>
