--- a/_layouts/announce.html
+++ b/_layouts/announce.html
@@ -36,8 +36,8 @@ layout: default
   </div>
   {% endif %}
   {% if page.alttext %}
-  Alternativtext des Bilds (für Menschen ohne Screenreader):
-    {{alttext}}
+  Bildbeschreibung des Bilds (für Menschen ohne Screenreader):<br/>
+  {{page.alttext}}
   {% endif %}
   </div>
 
